<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Card.Trip"
    android:layout_width="@dimen/trip_card_width"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/surface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_default"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/placeholderMessage"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_no_trips_message"
            android:layout_marginBottom="@dimen/margin_medium"/>

        <Button
            android:id="@+id/joinBtn"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_join_button"
            android:layout_marginBottom="@dimen/spacing_small"/>

        <Button
            android:id="@+id/createBtn"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_create_button"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>